# docx2pdf

./: .gitignore  pyproject.toml
docx2pdf/: convert.jxa
