[tool.poetry]
name = "docx2pdf"
version = "0.1.8"
description = "Convert docx to pdf on Windows or macOS directly using Microsoft Word (must be installed)."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AlJohri/docx2pdf"
repository = "https://github.com/AlJohri/docx2pdf"
authors = ["Al Johri <al.johri@gmail.com>"]
classifiers = [
	"Operating System :: MacOS",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Operating System :: Microsoft :: Windows",
	"Topic :: Office/Business :: Office Suites",
	"Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = ">= 3.11"
pywin32 = {version = ">= 309", platform = "win32"}
tqdm = ">= 4.67.1"
importlib-metadata = ">= 8.5.0"

[poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
docx2pdf = 'docx2pdf:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
